@startuml
'https://plantuml.com/sequence-diagram

interface EnemyFactory {
    +createEnemy() : AbstractAircraft
}

class EliteFactory {
    +createEnemy() : AbstractAircraft

}

class MobFactory {
    +createEnemy() : AbstractAircraft
}

EnemyFactory <|.. EliteFactory
EnemyFactory <|.. MobFactory

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + DropProps(int locationX, int locationY, int speedX, int speedY):AbstractProps
    + {abstract} shoot():List<BaseBullet>
 }

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- MobEnemy

class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + DropProps(int locationX, int locationY, int speedX, int speedY):AbstractProps
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- EliteEnemy

EnemyFactory --> AbstractAircraft
@enduml